--- a/package.json
+++ b/package.json
@@ -5,5 +5,8 @@
   "private": true,
   "workspaces": [
     "packages/*"
-  ]
+  ],
+  "scripts": {
+    "page:dev": "bun --hot packages/page/src/index.tsx"
+  }
 }
