--- a/.github/workflows/page_cd.yaml
+++ b/.github/workflows/page_cd.yaml
@@ -35,6 +35,6 @@ jobs:
       - name: Deploy to GitHub Pages
         uses: JamesIves/github-pages-deploy-action@v4
         with:
-          folder: packages/page/
+          folder: packages/page/dist
           branch: gh-pages
           clean: true
