--- a/packages/calculetes/package.json
+++ b/packages/calculetes/package.json
@@ -1,7 +1,13 @@
 {
   "name": "calculetes",
-  "module": "index.ts",
+  "module": "src/index.ts",
   "type": "module",
+  "scripts": {
+    "build": "bun build ./src/index.ts --outdir ./build",
+    "test": "jest --passWithNoTests",
+    "lint": "eslint . --ext .ts,.tsx",
+    "format": "prettier --write ."
+  },
   "devDependencies": {
     "@types/bun": "latest",
     "@types/jest": "^29.5.14",
