ci: update build command running on ci

--- a/.github/workflows/library_ci.yaml
+++ b/.github/workflows/library_ci.yaml
@@ -34,4 +34,4 @@ jobs:
       - name: Build the library
         run: |
           cd packages/calculetes
-          bun build
+          bun run build
