--- a/packages/calculetes/package.json
+++ b/packages/calculetes/package.json
@@ -2,6 +2,7 @@
   "name": "calculetes",
   "module": "src/index.ts",
   "type": "module",
+  "version": "0.1.0",
   "scripts": {
     "build": "bun build ./src/index.ts --outdir ./build",
     "test": "jest --passWithNoTests",
@@ -18,3 +19,4 @@
     "typescript": "^5"
   }
 }
+P
