chore: update tsconfig

--- a/packages/calculetes/tsconfig.json
+++ b/packages/calculetes/tsconfig.json
@@ -2,23 +2,32 @@
 	"compilerOptions": {
 		"lib": ["ESNext"],
 		"target": "ESNext",
-		"module": "ESNext",
+		"module": "NodeNext",
 		"moduleDetection": "force",
-		"jsx": "react-jsx",
-		"allowJs": true,
 
-		"moduleResolution": "bundler",
-		"allowImportingTsExtensions": true,
+		"moduleResolution": "NodeNext",
 		"verbatimModuleSyntax": true,
-		"noEmit": true,
+		"noEmit": false,
+		"emitDeclarationOnly": false,
+		"declaration": true,
+		"declarationDir": "./dist/",
+		"outDir": "./dist/",
+		"removeComments": false,
 
 		"strict": true,
 		"skipLibCheck": true,
 		"noFallthroughCasesInSwitch": true,
 		"noUncheckedIndexedAccess": true,
 
+		"isolatedModules": true,
+		"esModuleInterop": true,
+		"preserveConstEnums": true,
+		"sourceMap": true,
+
 		"noUnusedLocals": false,
 		"noUnusedParameters": false,
 		"noPropertyAccessFromIndexSignature": false
-	}
+	},
+	"include": ["src/**/*.ts"],
+	"exclude": ["node_modules", "dist", "tests"]
 }
