--- a/packages/calculetes/package.json
+++ b/packages/calculetes/package.json
@@ -1,10 +1,10 @@
 {
 	"name": "calculetes",
-	"module": "src/index.ts",
+	"module": "build/index.js",
 	"type": "module",
 	"version": "0.1.0",
 	"main": "./dist/index.js",
-	"types": "./dist/types/index.d.ts",
+	"types": "./dist/index.d.ts",
 	"files": ["dist"],
 	"scripts": {
 		"clean": "rm -rf dist",
