--- a/packages/calculetes/package.json
+++ b/packages/calculetes/package.json
@@ -10,9 +10,7 @@
 		"clean": "rm -rf dist",
 		"prebuild": "bun run clean",
 		"build": "tsc --project tsconfig.json",
-		"test": "jest --passWithNoTests",
-		"lint": "eslint . --ext .ts,.tsx",
-		"format": "prettier --write ."
+		"test": "jest --passWithNoTests"
 	},
 	"devDependencies": {
 		"@types/bun": "latest",
